# ECE227

./: .gitignore  CMakeLists.txt  Makefile  README.md  collab_genetic.json  main.py  network_generate.ipynb  pixi.toml  pyproject.toml  results.py  run.json  setup.py  simulator.py
.devcontainer/: devcontainer.json
data/: Makefile  random_graphs.py  remap.awk
include/: graph_generator.h  indicators.hpp  propagation_algorithms.h  properties.h  seed_algorithms.h  simulator.h
influence_analysis/: graphs.py  influence_algorithm.py  main.py  matrix_sim.py  propogation.py  simulator.py  simulator_greedy.py  util.py
src/: README.md  graph_generator.cpp  ic.cpp  independent_cascade.cpp  main.cpp  propagation_algorithms.cpp  seed_algorithms.cpp  simulator.cpp
