[project]
name = "ECE227"
version = "0.0.1"
description = "Final network project for UCSD ECE 227"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astroquery>=0.4.10",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "marimo>=0.12.9",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numba>=0.61.2",
    "nx-cugraph-cu12>=25.4.0; os_name == 'posix'",
    "pandas>=2.2.3",
    "pybind11>=2.12.0",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
